storaged: fix sidepanel warning/actions overflowing on some screen sizes
Just place the two elements using flex instead of arranging them using
two table columns.

Fixes #14973

--- a/pkg/storaged/storage.scss
+++ b/pkg/storaged/storage.scss
@@ -655,6 +655,8 @@ td.storage-action {
 .sidepanel-row {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    gap: var(--pf-global--spacer--sm);
 }
 
 .sidepanel-row-detail {
@@ -670,11 +672,6 @@ td.storage-action {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-}
-
-.pf-c-table tbody > tr > td.sidepanel-row-decoration {
-    --pf-c-table--cell--Width: 10%;
-    width: var(--pf-c-table--cell--Width);
 }
 
 .sidepanel-row .spinner {
